# seaicecp

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  jupyter_container.sh  jupyter_test.ipynb  launch_my_container.sh  pyproject.toml  start_container.sh
.devcontainer/: Containerfile  esgpull_entrypoint.sh  xarray_style.css
docs/: Makefile  conf.py  index.md  make.bat
docs/docs_data/: HighResMIP_choices.md  esgpull_downloads.md  globus_downloads.md
docs/docs_setup/: HighResMIP_choices.md  data_dir_structure.md  esgpull_downloads.md  initial_setup.md  installation.md  jupyter_test.md  start_container.md
esgpull_searches/: EC-Earth3P-HR_sivars_highres-future.sh  EC-Earth3P-HR_sivars_hist-1950.sh  HRMIP_areacello.sh  HadGEM3-GC3-1_sispeed_hist-1950.sh  HadGEM3-GC3-1_sivars_hist-1950_and_highres-future.sh
src/seaicecp/: __init__.py  seaicecp.py
src/seaicecp/analysis/: __init__.py  landfast.py  siconc.py  sum_by_year.py  trend_in_time.py
src/seaicecp/dataset/: __init__.py  date_type.py  example_dataset.py  field_mean.py  get_min_max.py  get_variable.py  grid_type.py  latlon_type.py  trim_dataset.py
src/seaicecp/params/: __init__.py  latlon_params.py  var_params.py
src/seaicecp/path/: __init__.py  data_paths.py  file_lists.py  find_data.py  manipulate_paths.py  model_paths.py  variable_paths.py
src/seaicecp/plot/: __init__.py  cbar_limits.py  diverging_cmap.py  hvplots.py  labels_and_titles.py  limit_extent.py  save_hvplots.py  seasonal_cycle.py  time_series.py  trend_in_time_map.py
src/seaicecp/verify/: __init__.py  verify_path.py
tests/: test_seaicecp.py
tests/test_analysis/: test_landfast.py  test_siconc.py  test_sum_by_year.py  test_trend_in_time.py
tests/test_dataset/: test_date_type.py  test_example_dataset.py  test_field_mean.py  test_get_min_max.py  test_get_variable.py  test_grid_type.py  test_latlon_type.py
tests/test_path/: test_data_paths.py  test_file_lists.py  test_find_data.py  test_manipulate_paths.py  test_model_paths.py  test_variable_paths.py
tests/test_plot/: test_labels_and_titles.py  test_time_series.py
tests/test_verify/: test_verify_path.py
