[project]
name = "seaicecp"
version = "0.1.0"
description = "Investigate sea ice choke points in the Canadian Arctic Archipelago using high-resolution models."
authors = [
    { name = "Mikhail Schee", email = "mikhail.schee@alumni.utoronto.ca" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "geoviews>=1.15.1",
    "netcdf4>=1.7.4",
    "xarray>=2026.4.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
