[project]
name = "seaicecp"
version = "0.1.0"
description = "Investigate sea ice choke points in the Canadian Arctic Archipelago using high-resolution models."
authors = [
    { name = "Mikhail Schee", email = "mikhail.schee@alumni.utoronto.ca" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "esgpull>=0.9.6",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "netcdf4>=1.7.4",
    "xarray>=2026.4.0",
]

[dependency-groups]
dev = [
    "myst-nb>=1.4.0",
    "sphinx-autoapi>=3.8.0",
    "sphinx-rtd-theme>=3.1.0",
]

[project.scripts]
seaicecp = "seaicecp:main"

[build-system]
requires = ["uv_build>=0.9.15,<0.12.0"]
build-backend = "uv_build"
