[project]
name = "seaicecp"
version = "0.1.0"
description = "Investigate sea ice choke points in the Canadian Arctic Archipelago using high-resolution models."
authors = [
    { name = "Mikhail Schee", email = "mikhail.schee@alumni.utoronto.ca" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "bokeh>=3.9.0",
    "cartopy>=0.25.0",
    "dask>=2026.3.0",
    "esgpull>=0.9.6",
    "geoviews>=1.15.1",
    "hvplot>=0.12.2",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "netcdf4>=1.7.4",
    "pillow>=12.2.0",
    "selenium>=4.43.0",
    "xarray>=2026.4.0",
]

[dependency-groups]
dev = [
    "myst-nb>=1.4.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "sphinx-autoapi>=3.8.0",
    "sphinx-rtd-theme>=3.1.0",
]

[project.scripts]
seaicecp = "seaicecp:main"

[build-system]
requires = ["uv_build>=0.9.15,<0.12.0"]
build-backend = "uv_build"
